@@ -1,8 +1,7 @@
-package com.example.growingshop.domain.order.dto;
+package com.example.growingshoporder.dto;
 
-import com.example.growingshop.domain.order.domain.Order;
-import com.example.growingshop.domain.order.domain.OrderLine;
-import com.example.growingshop.domain.product.dto.ProductResponse;
+import com.example.growingshoporder.domain.Order;
+import com.example.growingshoporder.domain.OrderLine;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -32,7 +31,7 @@ public class OrderResponse {
                     order.getOrderLines()
                             .stream()
                             .map(OrderLineRes::from)
-                            .collect(Collectors.toList())
+                            .toList()
             );
             res.totalPrice = order.totalPrice();
 
@@ -50,7 +49,7 @@ public class OrderResponse {
     @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class OrderLineRes {
         private long id;
-        private ProductResponse.ProductRes product;
+        //        private ProductResponse.ProductRes product;
         private int price;
         private int quantity;
 
